--- a/litera.css
+++ b/litera.css
@@ -3213,9 +3213,9 @@ input[type="button"].btn-block {
   border-left: 0.3em solid transparent;
 }
 
-.dropdown-toggle:empty::after {
+/* .dropdown-toggle:empty::after {
   margin-left: 0;
-}
+} */
 
 .dropdown-menu {
   position: absolute;
